TagCheckBox: Handle dolphin crashes when encountering a tag containing slash '/' character

Use KEditTagsDialog so the user can create and select hierarchical tags

BUG: 437501

FIXED-IN: 25.08